{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 15,
  "lineage": "72fea319-fa96-33f7-a3b6-424a4afec942",
  "resources": [
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377149147:security-group/sg-0c2f68dd9b7dbdf18",
            "description": "Security group for Aurora MySQL cluster",
            "egress": [],
            "id": "sg-0c2f68dd9b7dbdf18",
            "ingress": [],
            "name": "aurora-security-group",
            "name_prefix": "",
            "owner_id": "891377149147",
            "revoke_rules_on_delete": false,
            "tags": {
              "AWSRegion": "Frankfurt",
              "Environment": "development",
              "Name": "aurora-security-group",
              "Organization": "barath SE",
              "Owner": "SRE Team"
            },
            "tags_all": {
              "AWSRegion": "Frankfurt",
              "Environment": "development",
              "Name": "aurora-security-group",
              "Organization": "barath SE",
              "Owner": "SRE Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fc414f341d85ff9"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "aws_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Allow required outbound traffic",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377149147:security-group-rule/sgr-04550046354fbc4b0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow required outbound traffic",
            "from_port": null,
            "id": "sgr-04550046354fbc4b0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c2f68dd9b7dbdf18",
            "security_group_rule_id": "sgr-04550046354fbc4b0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db_security_group.aws_security_group.aws_sg"
          ]
        }
      ]
    },
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "aws_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Allow Data VPC",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891377149147:security-group-rule/sgr-05a1e80e460037bc3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow Data VPC",
            "from_port": 3306,
            "id": "sgr-05a1e80e460037bc3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c2f68dd9b7dbdf18",
            "security_group_rule_id": "sgr-05a1e80e460037bc3",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db_security_group.aws_security_group.aws_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377149147:vpc/vpc-0053032585146dd93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02e4cade7dee44bd8",
            "default_route_table_id": "rtb-0c7789784fb94f8cf",
            "default_security_group_id": "sg-0741321209c5e2c4d",
            "dhcp_options_id": "dopt-0046cc7a630020e2c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0053032585146dd93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7789784fb94f8cf",
            "owner_id": "891377149147",
            "tags": {
              "AWSRegion": "Frankfurt",
              "Environment": "development",
              "Name": "barath-db-vpc",
              "Organization": "barath SE",
              "Owner": "SRE Team"
            },
            "tags_all": {
              "AWSRegion": "Frankfurt",
              "Environment": "development",
              "Name": "barath-db-vpc",
              "Organization": "barath SE",
              "Owner": "SRE Team"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}